[metadata]
version = 0.0.1

name = dotify
url = https://github.com/billsioros/dotify
# download_url = https://github.com/billsioros/dotify
author = Vasileios Sioros
author_email = billsioros97@gmail.com
license = MIT
description = ðŸðŸŽ¶ Yet another Spotify Web API Python library
long_description = file:README.md
long_description_content_type = text/markdown
keywords = python37 python38 python39 spotify-web-api spotify-client spotify-library
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Topic :: Multimedia :: Sound/Audio

[options]
include_package_data = true
install_requires =
    python-jsonschema-objects
    youtube-search-python
    requests
    moviepy
    click
    spotipy
    mutagen
    pytube
python_requires = >=3.7
packages = find:

[options.extras_require]
test =
    pytest
    pytest-cov
dev =
    autopep8
    flake8
    pylint
    isort
    mypy

# [options.entry_points]
# console_scripts=
#     spotdl = spotdl:console_entry_point

# [mypy]
# ignore_missing_imports = True

[flake8]
max-line-length = 100
ignore = E301
